# PlayingWithTiagoAndBT

./: CMakeLists.txt  README.md  package.xml
include/tiago_basic_bt/bt_actions/: tiago_move_circle.hpp  tiago_play_motion.hpp
src/: tiago_bt_demo.cpp
src/bt_actions/: tiago_move_circle.cpp  tiago_play_motion.cpp
trees/: groot.bak  tiago_basic.xml  tiago_super_basic.xml
