<?xml version="1.0"?>
<package format="2">
  <name>tiago_basic_bt</name>
  <version>0.0.0</version>
  <description>The tiago_basic_bt package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="devis.dalmoro@todo.todo">devis.dalmoro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>

  <!-- build build depends -->
  <build_depend>behaviortree_cpp_v3</build_depend>

  <!-- exec build depends -->
  <exec_depend>behaviortree_cpp_v3</exec_depend> 

  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
